--- a/design/video-js-tags.css
+++ b/design/video-js-tags.css
@@ -5,10 +5,33 @@
   left: 0; top: 0; /*Needed for IE6*/
 
   /*background: url('video-js.png') 0 -50px;*/
-  background: url('pin_green.png') 0 0;
+  /*background: url('pin_green.png') 0 0;*/
   /* CSS Curved Corners. Needed to make shadows curved. * /
   -moz-border-radius: 0.8em; -webkit-border-radius: 0.8em; border-radius: 0.8em;
   /* CSS Shadows * /
   -webkit-box-shadow: 0 2px 4px 0 #000; -moz-box-shadow: 0 2px 4px 0 #000; box-shadow: 0 2px 4px 0 #000;
   */
+}
+
+.draggable {
+  background: url('pin_green.png') 0 0;
+}
+
+.undraggable {
+  background: url('pin_black.png') 0 0;
+}
+
+.tooltip {
+    /*border: 1px solid #8A5802;*/
+    visibility: hidden;
+    position: relative;
+    left: 20px;
+    top: -5px;
+    width: 100px;
+}
+
+.vjs-seek-handle2:hover .tooltip
+{
+    visibility: visible;
+    z-index: 1000;
 }
