--- a/design/video-js-tags.css
+++ b/design/video-js-tags.css
@@ -35,3 +35,17 @@
     visibility: visible;
     z-index: 1000;
 }
+
+.vjs-poster-ext {
+    cursor: pointer;
+    position:absolute;
+    margin:auto;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+}
+
+.maxheight-maxwidth { max-height: 100%; max-width: 100%;}
+.maxheight-width { max-height: 100%; width: 100%;}
+.maxwidth-height { max-width: 100%; height: 100%;}
