--- a/design/video-js-tags.css
+++ b/design/video-js-tags.css
@@ -13,6 +13,15 @@
   */
 }
 
+.vjs-controls {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .draggable {
   background: url('pin_green.png') 0 0;
 }
